fix ButtonAddTransaction, fix style header, fix logout: now only on button logout/Exit modal LogOut is open, earlier even on username. Styling HomeTab, add animations to edit button (in transactionDetails), fix ModalLogout on mobile - could scroll modal and check and click thiings under modal, add closeing modal before dispach logout, fix navigations style and place, Fix PageContainer style, fix DeleteButton styles, fix EditButton, Fix styles in DashBoard

--- a/src/components/ButtonAddTransactions/ButtonAddTransaction.module.css
+++ b/src/components/ButtonAddTransactions/ButtonAddTransaction.module.css
@@ -1,26 +1,17 @@
-.openModal {
-   border: none;
-  padding: 0;
-  background: none;
-  width: 44px;
-  height: 44px;
+.button {
+  border: none;
+  border-radius: 50%;
+  background-color: transparent;
   cursor: pointer;
-  background-image: url(../../assets/icons/add_circle_black_24dp.svg);
-  background-size: cover;
-  position: sticky;
-  z-index: 5;
-  bottom: 64px;
-  right: 64px;
+
   filter: drop-shadow(0px 10px 5px #24cca869);
   -webkit-filter: drop-shadow(0px 10px 5px #24cca869);
   -moz-filter: drop-shadow(0px 10px 5px #24cca869);
-  @media screen and (min-width: 768px) {
-    bottom: 84px;
-    right: 84px;
-  }
+  transition: filter 200ms ease-in-out;
 }
-.openModal:hover {
-  filter: drop-shadow(0px 10px 5px #24cca8a4);
-  -webkit-filter: drop-shadow(0px 10px 5px #24cca8a4);
-  -moz-filter: drop-shadow(0px 10px 5px #24cca8a4);
+.button:hover {
+  transition: filter 200ms ease-in-out;
+  filter: drop-shadow(0px 3px 3% #24cca8a4);
+  -webkit-filter: drop-shadow(0px 3px 3px #24cca8a4);
+  -moz-filter: drop-shadow(0px 3x 3px #24cca8a4);
 }
