--- a/src/components/ModalLogout/ModalLogout.module.css
+++ b/src/components/ModalLogout/ModalLogout.module.css
@@ -6,14 +6,17 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: var(--color-bg-backdrop);
-  @media screen and (min-width: 768px) {
-    width: 100vw;
-    height: 100vh;
+  overflow: hidden;
+position: fixed;
+  
+@media screen and (min-width: 768px) {
+    width: 100%;
+    height: 100%;
   }
 }
 
